...

    var body: some View {
        VStack {
            HStack {
                Spacer()
                Button(action: onClose) {
                    Image(systemName: "xmark")
                        .resizable()
                        .aspectRatio(contentMode: .fit)
                        .frame(width: 16, height: 16)
                }
                .buttonStyle(.borderless)
                .tint(.primaryColor)
            }.padding(20)
            Spacer(minLength: 56)
            Text(conversation == nil ? "New Chat" : "Edit Chat")
                .font(.manrope(size: 28, weight: .bold))
                .accessibilityIdentifier("add-conversation-title")
            Spacer()
                .frame(height: 40)
            TextField(text: $title) {
                Text("Chat Name")
            }
            .textFieldStyle(.plain)
...
