...
                        .padding(.vertical, 8)
                        .padding(.horizontal, 12)
                    }
                    .buttonStyle(.borderless)
                    .padding(.horizontal, 8)
                    .tint(.blackText.opacity(0.5))
                    .accessibilityIdentifier("list-add-conversation-button")
                    ForEach(viewStore.chats) { conversation in
                        Button(action: { onChatChanged(conversation) }) {
                            HStack {
                                Image(systemName: conversation.isMain ? "command" : "bubble.left" )
                                    .aspectRatio(contentMode: .fit)
                                    .frame(width: 20)
...
