...
                isFocused = false
                onChatsClick()
            }) {
                Image(systemName: "bubble.left.and.bubble.right")
                    .tint(.primaryColor)
                    .frame(width: 24, height: 24)
                    .accessibilityIdentifier("chatlist-button")
            }.buttonStyle(.borderless)
            Spacer()
            VStack(spacing: 0) {
                Text(viewStore.conversation.title)
                    .font(.manrope(size: 16, weight: .heavy))
                    .lineLimit(1)
...
